feat: ajout de la condition seulement pour ubuntu et node 18

--- a/.github/workflows/matrixArtefact.yml
+++ b/.github/workflows/matrixArtefact.yml
@@ -69,5 +69,6 @@ jobs:
             path: dist/
 
         - name: Simulate deployment
+          if: matrix.os == 'ubuntu-latest' && matrix.node == 18
           run: echo "Deploying the application ..."
 
