--- a/.github/workflows/matrixArtefact.yml
+++ b/.github/workflows/matrixArtefact.yml
@@ -60,7 +60,7 @@ jobs:
     conditional-job:
       runs-on: ubuntu-latest
       needs: build
-      if: github.ref == 'refs/heads/main' && needs.build.outputs.artifact-ubuntu-latest-node18 == 'exists'
+      if: github.ref == 'refs/heads/main'
       steps:
         - name: Download artifact
           uses: actions/download-artifact@v4
